# CYXWIZ

./: .gitignore  .gitmodules  ARRAYFIRE_INTEGRATION_STATUS.md  BUILDING.md  BUILD_REPORT_2025-11-06.md  BUILD_SUCCESS_REPORT.md  BUILD_TEST_REPORT.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CUDA_INTEGRATION_FINAL_REPORT.md  CUDA_SETUP_GUIDE.md  DOCKING_LAYOUT_CODE_REFERENCE.md  DOCKING_LAYOUT_IMPLEMENTATION.md  FIXES_SUMMARY.md  FUTURE_WORK_ROADMAP.md  GPU_PERFORMANCE_STATUS.md  HEADER_REFACTORING_SUMMARY.md  INSTALL.md  INTEGRATION_TEST_CASES.md  LISTJOBS_IMPLEMENTATION_SUCCESS.md  P2P_WORKFLOW_DESIGN.md  PHASE3_COMPLETION.md  PHASE3_SERVER_NODE_GUIDE.md  PHASE3_TEST_GUIDE.md  PHASE5_FILE_HANDLERS_GUIDE.md  PHASE7_SESSION1_PROGRESS.md  PLOTTING_SYSTEM.md  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.md  README.md  RELEASE_v0.2.0_SUMMARY.md  SCRIPT_README.md  TEST_NODE_DISCONNECTION.md  benchmark_gpu.py  build.bat  build.sh  build_log.txt  build_macos.md  cando.md  (+43 more)
cyxwiz-backend/: CMakeLists.txt  README.md  TODO.md
cyxwiz-backend/examples/python/: data_analysis_eda.py  data_loader_example.py  embedding_example.py  gru_example.py  lstm_example.py  ml_data_pipeline.py  multi_file_pipeline.py  quick_start_snippets.py  transformer_example.py
cyxwiz-backend/include/cyxwiz/: activation.h  api_export.h  clustering.h  cyxwiz.h  cyxwiz_c.h  data_loader.h  data_transform.h  dataloader.h  device.h  dimensionality_reduction.h  engine.h  feature_importance.h  layer.h  linear_algebra.h  loss.h  memory_manager.h  model.h  model_evaluation.h  model_interpretability.h  optimization.h  optimizer.h  scheduler.h  sequential.h  signal_processing.h  stats_utils.h  tensor.h  text_processing.h  time_series.h  utilities.h
cyxwiz-backend/python/: bindings.cpp
cyxwiz-backend/src/algorithms/: activation.cpp  clustering.cpp  data_transform.cpp  dataloader.cpp  dimensionality_reduction.cpp  feature_importance.cpp  layer.cpp  linear_algebra.cpp  loss.cpp  model.cpp  model_evaluation.cpp  model_interpretability.cpp  optimization.cpp  optimizer.cpp  scheduler.cpp  sequential.cpp  signal_processing.cpp  text_processing.cpp  time_series.cpp  utilities.cpp
cyxwiz-backend/src/core/: cyxwiz_c.cpp  data_loader.cpp  device.cpp  device_1.cpp  engine.cpp  memory_manager.cpp  tensor.cpp
cyxwiz-central-server/: .env.example  CENTRAL_SERVER_ASSESSMENT.md  Cargo.toml  ENUM_FIX_SUMMARY.md  GRPC_ENABLEMENT_GUIDE.md  PHASE7_TESTS_STATUS.md  PHASE7_TEST_SUITE_SUMMARY.md  README.md  RUN_TESTS.md  TUI_GUIDE.md  UUID_SQLITE_ISSUE.md  add_endpoint_columns.py  build.rs  config.toml  cyxwiz.db  fix_grpc.bat  fix_grpc.sh  fix_table_schema.py  fix_wallet_constraint.py  fix_wallet_simple.py  insert_job_with_metadata.py  insert_matching_node.py  insert_test_data.py  insert_test_job.py  mark_migrations_applied.py  run_tests.bat  test_db_check.rs  update_node_heartbeat.py
cyxwiz-central-server/.cargo/: config.toml
cyxwiz-central-server/docs/: centraladmin.md
cyxwiz-central-server/examples/: test_grpc.rs
cyxwiz-central-server/migrations/: 20250105000001_initial_schema.sql  20250106000001_deployment_system.sql  20250118000001_add_node_endpoint.sql  20250118000002_fix_wallet_unique_constraint.sql  20250610000001_node_devices.sql  20251218000001_add_user_id_to_nodes.sql  20251222000001_add_reputation_tracking.sql
cyxwiz-central-server/src/: config.rs  error.rs  lib.rs  main.rs  pb.rs
cyxwiz-central-server/src/auth/: jwt.rs  middleware.rs  mod.rs
cyxwiz-central-server/src/blockchain/: client.rs  escrow.rs  mod.rs  payment_processor.rs  reputation.rs  solana_client.rs  types.rs
cyxwiz-central-server/src/cache/: mod.rs
cyxwiz-central-server/src/database/: mod.rs  models.rs  mongo.rs  queries.rs
cyxwiz-central-server/src/scheduler/: job_queue.rs  matcher.rs  mod.rs  node_monitor.rs  reputation_handler.rs  session_monitor.rs
cyxwiz-central-server/src/tui/: app.rs  events.rs  mod.rs  runner.rs  updater.rs
cyxwiz-central-server/tests/: job_status_service_tests.rs  job_status_service_tests_backup.rs  job_status_service_tests_fixed.rs
cyxwiz-engine/: CMakeLists.txt  DOCKABLE_PLOT_TEST_CONTROL.md  FUNCTIONAL_PLOT_GENERATION.md
cyxwiz-engine/python/: INTEGRATION.md  README.md  __init__.pyi  plot_bindings.cpp  requirements.txt  test_bindings.py
cyxwiz-engine/python/examples/: README.md  plotting_advanced.py  plotting_basic.py  training_dashboard.py
cyxwiz-engine/resources/: default.cyxgraph  engine_config.json
cyxwiz-engine/resources/patterns/: alexnet.cyxgraph  attention_block.cyxgraph  attention_block.json  autoencoder.cyxgraph  bilstm.cyxgraph  cnn_basic.cyxgraph  cnn_classifier.json  unet.json  (+19 more)
cyxwiz-engine/src/: application.cpp  application.h  main.cpp
cyxwiz-engine/tests/: test_sandbox_timeout.cpp
cyxwiz-protocol/: CMakeLists.txt
cyxwiz-protocol/common/: utils.cpp  utils.h  version.cpp  version.h
cyxwiz-protocol/proto/: common.proto  compute.proto  daemon.proto  deployment.proto  execution.proto  inference.proto  job.proto  node.proto  reservation.proto  wallet.proto
cyxwiz-server-node/: CMakeLists.txt  MACOS_SMC_SETUP.md  README.md  cmakelists_1.txt  macos_entitlements.plist  sign_macos.sh
cyxwiz-server-node/src/: daemon_main.cpp  deployment_handler.cpp  deployment_handler.h  deployment_manager.cpp  deployment_manager.h  gui_main.cpp  inference_handler.cpp  inference_handler.h  job_execution_service.cpp  job_execution_service.h  job_executor.cpp  job_executor.h  main.cpp  metrics_collector.cpp  model_loader.cpp  model_loader.h  node_client.cpp  node_client.h  node_client_1.cpp  node_server.cpp  node_service.cpp  node_service.h  remote_data_loader.cpp  remote_data_loader.h  terminal_handler.cpp  terminal_handler.h
cyxwiz-server-node/tests/: P2P_TESTING_GUIDE.md  README.md  generate_test_jwt.cpp  mock_engine_client.cpp  standalone_p2p_server.cpp  test_job_execution_service.cpp  test_onnx_loader.cpp  test_security.cpp
tests/: CMakeLists.txt
tests/unit/: test_data_loader.cpp  test_debug.cpp  test_device.cpp  test_onnx_export.cpp  test_optimizer.cpp  test_sequence_layers.cpp  test_tensor.cpp
(+752 files in other folders)
